# Cockatoo

./: CMakeLists.txt  CTestConfig.cmake  README.md  annotated.html  classes.html  classexample_1_1ExampleClass-members.html  classexample_1_1ExampleClass.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  example_8cpp.html  example_8hpp.html  example_8hpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  namespaceexample.html  namespaces.html
.github/workflows/: doxygen.yml  tests.yml
docs/: Doxyfile
include/: example.hpp
tests/: CMakeLists.txt
